<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TripDetails">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="@dimen/_160sdp"

        android:layout_marginTop="@dimen/_minus10sdp"
        app:cardCornerRadius="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/hills" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeName"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPlace1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_15sdp"
        app:cardElevation="@dimen/_3sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:padding="@dimen/_10sdp"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/depLoc"
                android:textColor="@color/black"

                android:textSize="@dimen/_11ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeName"
                android:textColor="@color/black"

                android:textSize="@dimen/_11ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/_5sdp"
                android:elevation="@dimen/_2sdp"
                android:src="@drawable/dotted_line"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                app:layout_constraintEnd_toStartOf="@+id/textView4"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/textView5" />

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/bus"

                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintEnd_toStartOf="@+id/textView4"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/textView4" />

            <TextView
                android:id="@+id/tvDepTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintStart_toStartOf="@id/textView5"
                app:layout_constraintTop_toBottomOf="@id/textView5" />

            <TextView
                android:id="@+id/tvDepDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/date"
                android:textColor="@color/blackOff"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintStart_toStartOf="@id/tvDepTime"
                app:layout_constraintTop_toBottomOf="@id/tvDepTime" />

            <TextView
                android:id="@+id/tvHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_2sdp"
                android:text="@string/hours"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintBottom_toBottomOf="@id/tvHrs"
                app:layout_constraintEnd_toStartOf="@id/tvHrs"
                app:layout_constraintTop_toBottomOf="@id/textView4" />

            <TextView
                android:id="@+id/tvHrs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hrs"
                android:textColor="@color/black"
                android:textSize="@dimen/_9ssp"
                app:layout_constraintBottom_toBottomOf="@id/tvHours"
                app:layout_constraintEnd_toEndOf="@id/textView4" />

            <TextView
                android:id="@+id/tvDurExpected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/expectedDur"
                android:textColor="@color/blackOff"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="@id/tvHrs"
                app:layout_constraintTop_toBottomOf="@id/tvHours" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/bookSeat"
                android:textColor="@color/design_default_color_primary"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="@+id/tvDurExpected"
                app:layout_constraintStart_toStartOf="@+id/tvDepDate"
                app:layout_constraintTop_toBottomOf="@id/tvDurExpected" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardplace2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_15sdp"
        app:cardElevation="@dimen/_3sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardPlace1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:padding="@dimen/_10sdp"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/textViewSource"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lahore"
                android:textColor="@color/black"

                android:textSize="@dimen/_11ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewDest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeName"
                android:textColor="@color/black"

                android:textSize="@dimen/_11ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageViewPath"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/_5sdp"
                android:elevation="@dimen/_2sdp"
                android:src="@drawable/dotted_line"
                app:layout_constraintBottom_toBottomOf="@+id/textViewSource"
                app:layout_constraintEnd_toStartOf="@+id/textViewDest"
                app:layout_constraintStart_toEndOf="@+id/textViewSource"
                app:layout_constraintTop_toTopOf="@+id/textViewSource" />

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/bus"

                app:layout_constraintBottom_toBottomOf="@+id/imageViewPath"
                app:layout_constraintEnd_toStartOf="@+id/textViewDest"
                app:layout_constraintStart_toEndOf="@+id/textViewSource"
                app:layout_constraintTop_toTopOf="@+id/textViewDest" />

            <TextView
                android:id="@+id/tvDepTime2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintStart_toStartOf="@id/textViewSource"
                app:layout_constraintTop_toBottomOf="@id/textViewSource" />

            <TextView
                android:id="@+id/tvDepDate2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/date"
                android:textColor="@color/blackOff"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintStart_toStartOf="@id/tvDepTime2"
                app:layout_constraintTop_toBottomOf="@id/tvDepTime2" />

            <TextView
                android:id="@+id/tvHours2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_2sdp"
                android:text="@string/hours"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintBottom_toBottomOf="@id/tvHrs2"
                app:layout_constraintEnd_toStartOf="@id/tvHrs2"
                app:layout_constraintTop_toBottomOf="@id/textViewDest" />

            <TextView
                android:id="@+id/tvHrs2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hrs"
                android:textColor="@color/black"
                android:textSize="@dimen/_9ssp"
                app:layout_constraintBottom_toBottomOf="@id/tvHours2"
                app:layout_constraintEnd_toEndOf="@id/textViewDest" />

            <TextView
                android:id="@+id/tvDurExpected2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/expectedDur"
                android:textColor="@color/blackOff"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="@id/tvHrs2"
                app:layout_constraintTop_toBottomOf="@id/tvHours2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/bookSeat"
                android:textColor="@color/design_default_color_primary"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="@+id/tvDurExpected2"
                app:layout_constraintStart_toStartOf="@+id/tvDepDate2"
                app:layout_constraintTop_toBottomOf="@id/tvDurExpected2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>